grammar.js
    program: $ => seq(
      optional($.edition_pragma),
      repeat($.import_stmt),
      repeat($._declaration),
    ),

    // Edition pragma — opts a module into a dated language edition (Rust-style
    // editions, SPEC §17). Must be the first line of the file. Names are dates,
    // e.g. `@edition "2026.6"`. Read by the checker (lower/infer/eval), which gate
    // edition-specific semantics; absent → the project's pinned default edition.
    import_stmt: $ => choice(
      seq('import', $.lower_id, 'from', $.string, $._newline),
      seq('import', $.upper_id, 'from', $.string, $._newline),   // import String from "std/string"
      seq('import', '{', commaSep($.import_name), '}', 'from', $.string, $._newline),
      seq('import', 'js', $.string, 'as', $.lower_id, $._newline),
    ),

    import_name: $ => choice(
      $.lower_id,
      seq($.lower_id, 'as', $.lower_id),
      seq($.upper_id, 'as', $.upper_id),
    ),

    // ----------
    // Declarations
    // ----------

    _declaration: $ => choice(
      $.type_def,
      $.store_def,
      $.machine_def,
      $.saga_def,
      $.stream_def,
      $.module_def,
      $.function_def,
      $.function_sig,
      $.binding,
      $.decorator_def,
      $.kernel_block,
    ),

    // First-class saga: a top-level persistent FSM with compensation.
    //   saga Checkout(cart: Cart): Result Receipt Error
    //     over CheckoutState        -- optional explicit backing store
    //     :reserve
    //       ...
    // Called like a function `Checkout(cart)` to run to completion, or spawned
    // as a live instance with `go Checkout(cart)` (yields a saga handle).
    _type: $ => choice(
      $.simple_type,
      $.type_var,
      $.lifetime_var,
      $.lifetime_of_type,
      $.unit_type,
      $.parameterized_type,
      $.record_type,
      $.tuple_type,
      $.tainted_type,
      $.effect_type,
      $.async_type,
      $.array_type,
      $.result_type,
      $.pointer_type,
      $.atomic_type,
    ),

    simple_type: $ => $.upper_id,

    effect_type: $ => seq(
      'Effect',
      '[',
      commaSep1($.lower_id),
      ']',
      $._type,
    ),

    result_type: $ => seq(
      'Result',
      choice(
        // `Result(ok, err)` paren form — `token.immediate('(')` (no space) keeps it
        // distinct from juxtaposition `Result ok err`. Without this, `Result(A, B)`
        // parsed as `Result` applied to the tuple `(A, B)` and then hungrily ate the
        // following expression as the error type (turning a def into a signature).
        seq(token.immediate('('), $._type, ',', $._type, ')'),
        seq($._type, $._type),
      ),
    ),

    pointer_type: $ => prec(2, seq(
      'Ptr',
      optional($.lifetime_var),
      $._type,
    )),

    lifetime_var: $ => /~[a-z][a-zA-Z0-9_]*/,

    decorator_def: $ => seq(
      $.decorator,
      choice($.function_def, $.type_def),
    ),

    decorator: $ => seq(
      '@',
      $.lower_id,
      optional(seq(
        commaSep1($.decorator_arg),
      )),
      $._newline,
    ),

    function_def: $ => choice(
      // block form
      seq(
        'def',
        $.lower_id,
        optional($.param_list),
        ':',
        $._type,
        $._newline,
        $._indent,
        repeat1($._statement),
        $._dedent,
      ),
      // single-line form: def foo(x: Number): Number -> x + 1
      seq(
        'def',
        $.lower_id,
        optional($.param_list),
        ':',
        $._type,
        '->',
        $._expr,
        $._newline,
      ),
    ),

    // where clause as first line(s) of body
    param: $ => choice(
      seq($.lower_id, ':', $._type, '=', $._expr),   // n: Number = 0
      seq($.lower_id, '=', $._expr),                 // n = 0  (type inferred)
      seq($.lower_id, ':', $._type),
      $.lower_id,
      $.atom_lit,
      $.upper_id,
      $.wildcard,
      $.number,
      $.bool,
    ),

    // Function-signature parameter list. A bare `*` separator marks every
    // parameter after it keyword-only: def render(node, *, theme=Dark).
    param_list: $ => seq(
      '(',
      commaSep(choice($.param, $.kw_separator)),
      ')',
    ),

    _statement: $ => choice(
      $.binding,
      $.block_binding,
      $.index_assign,
      $.deref_assign,
      $.destructure,
      $.on_handler,
      $.pipe_block,
      $.try_block,
      $.retry_block,
      $.loop_expr,
      $.await_stmt,
      $.machine_expr,
      $.saga_expr,
      $.where_stmt,
      seq($._expr, $._newline),
      // Block expressions end with _dedent (no trailing _newline):
      $.if_expr,
      $.if_pattern_expr,
      $.match_expr,
      $.responsive_expr,
      $.transaction_expr,
      $.comptime_block,
      $.unsafe_block,
      $.pipe_match_stmt,
      $.pipe_lambda_stmt,
      $.element,
      $._newline,
    ),

    // Saga-specific statement set — superset of _statement.
    // Saga-only rules are ONLY valid here, keeping _indent from being
    // valid after expressions in regular function bodies.
    // saga_branch (| pattern -> ...) is valid directly here — go_stmt+
    // followed by saga_branch+ at the same level forms a parallel join.
    binding: $ => seq(
      optional(choice('const', 'let', seq('let', 'mut'), 'mut')),
      $.lower_id,
      optional(seq(':', $._type)),
      '=',
      $._expr,
      $._newline,
    ),

    deref_assign: $ => seq(
      $.deref_expr,
      '=',
      $._expr,
      $._newline,
    ),

    duration_lit: $ => token(seq(/[0-9]+/, choice('ms', 's', 'm', 'h'))),

    // ----------
    // Expressions
    // ----------

    _expr: $ => choice(
      $.literal,
      $.identifier_expr,
      $.unary_expr,
      $.binary_expr,
      $.pipe_expr,
      $.ternary_expr,
      $.if_then_expr,
      $.field_access,
      $.optional_chain,
      $.array_index,
      $.deref_expr,
      $.addr_of_expr,
      $.propagate_expr,
      $.range_expr,
      $.if_pattern_expr,
      $.type_test,
      $.record_literal,
      $.record_spread,
      $.brace_block,
      $.list_literal,
      $.for_expr,
      $.match_expr,
      $.responsive_expr,
      $.if_expr,
      $.call,
      $.lambda,
      $.send_expr,
      $.ask_expr,
      $.transaction_expr,
      $.js_block,
      $.unsafe_block,
      $.comptime_block,
      $.lazy_expr,
      $.go_expr,
      $.resume_expr,
      $.drop_expr,
      $.break_expr,
      $.continue_expr,
      $.grouped,
      $.tuple_literal,
      $.await_expr,
    ),

    identifier_expr: $ => choice(
      $.lower_id,
      $.upper_id,
    ),

    unary_expr: $ => prec('unary', seq(
      choice('-', '!', 'not'),
      $._expr,
    )),

    binary_expr: $ => choice(
      prec.left('power',
        seq($._expr, '^', $._expr)),
      prec.left('multiplicative',
        seq($._expr, choice('*', '/', '%'), $._expr)),
      prec.left('additive',
        seq($._expr, choice('+', '-', '++'), $._expr)),
      prec.left('bitwise_shift',
        seq($._expr, choice('<<', '>>'), $._expr)),
      prec.left('bitwise',
        seq($._expr, choice('&', '|', 'xor'), $._expr)),
      prec.left('comparative',
        seq($._expr, choice('==', '!=', '<', '>', '<=', '>='), $._expr)),
      prec.left('logical',
        seq($._expr, choice('&&', '||'), $._expr)),
    ),

    pipe_expr: $ => prec.left('pipe', seq(
      $._expr,
      '|>',
      choice(
        $.pipe_lambda_call,
        $.call,
        $.lower_id,
        $.pipe_match,
        $.upper_id,
        $.send_expr,
        $.ask_expr,
        $.transaction_expr,
      ),
    )),

    ternary_expr: $ => prec.right('ternary', choice(
      seq($._expr, '?', $._expr, ':', $._expr),
      seq($._expr, '?', $._expr),
    )),

    // Inline conditional expression `if c then a else b` — the 2026.6 replacement
    // for the ternary. Distinct from the indented-block `if_expr` (which takes a
    // newline after the condition); here `then` follows the condition on one line.
    field_access: $ => prec.left('postfix', seq(
      $._expr,
      '.',
      $.member_name,
    )),

    optional_chain: $ => prec.left('postfix', seq(
      $._expr,
      '?.',
      $.member_name,
    )),

    // A member name after `.`/`?.`. Accepts ordinary identifiers AND reserved
    // words: in member position a keyword can only mean a field name, so
    // `x.after` / `x.state` / `x.type` are unambiguous. Kept as a named node so
    // the lowerer reads `.text` uniformly whether the field is a keyword or not.
    deref_expr: $ => prec.left('postfix', seq(
      $._expr,
      '.*',
    )),

    addr_of_expr: $ => prec.left('postfix', seq(
      $._expr,
      '.&',
    )),

    // ? propagates error; ?: provides fallback expression (Error "msg", custom type, etc.)
    // Propagate `value?` — the `?` is GLUED (no preceding space) so it can't be
    // confused with the ternary `cond ? a : b` (spaced). `?:` stays a distinct
    // two-char token (propagate-with-default).
    propagate_expr: $ => prec.left('postfix', choice(
      seq($._expr, token.immediate('?')),
      seq($._expr, '?:', $._expr),
    )),

    array_index: $ => prec.left('postfix', seq(
      $._expr,
      '[',
      $._expr,
      ']',
    )),

    type_test: $ => prec.left('comparative', seq(
      $._expr,
      'is',
      $.upper_id,
    )),

    // Record literal. The 2026.6 canonical opener is `#{` — it makes records
    // unambiguous from `{ … }` blocks (dissolving the comma-`:` vs semicolon-`=`
    // disambiguation) and visually distinct from named-arg calls (`Row(size=12)` with
    // `=` vs `#{ size: 12 }` with `:`). The bare `{ … }` form stays in the superset
    // grammar but is deprecated (lowerer warns 2026.1 / errors 2026.6).
    record_literal: $ => choice(
      seq('#{', commaSep1($.record_field), '}'),
      seq('{',  commaSep1($.record_field), '}'),
    ),

    record_field: $ => seq(
      $.lower_id,
      ':',
      $._expr,
    ),

    record_spread: $ => choice(
      seq('#{', '...', $._expr, optional(seq(',', commaSep1($.record_field))), '}'),
      seq('{',  '...', $._expr, optional(seq(',', commaSep1($.record_field))), '}'),
    ),

    list_literal: $ => seq(
      '[',
      commaSep($._expr),
      ']',
    ),

    grouped: $ => seq(
      '(',
      $._expr,
      ')',
    ),

    // Tuple literal: (a, b) or (a, b, c) — at least two elements
    // prec(1) over grouped so GLR prefers tuple when comma follows
    lazy_expr: $ => prec('unary', seq('lazy', $._expr)),

    drop_expr: $ => prec('unary', seq('drop', $._expr)),

    break_expr: $ => 'break',

    continue_expr: $ => 'continue',

    // ----------
    // Lambdas
    // ----------

    lambda_simple: $ => prec.right('lambda', seq(
      'fn',
      optional(choice(
        $.simple_pattern,                                // fn x -> …  /  fn (a, b) -> … (tuple)
        seq('(', $.lower_id, repeat1($.lower_id), ')'),  // fn (a b c) -> … (multi-arg; space-separated, not a tuple)
      )),
      '->',
      $._expr,
    )),

    lambda: $ => choice(
      $.lambda_simple,
      $.lambda_block,
    ),

    // ----------
    // Match expressions
    // ----------

    simple_pattern: $ => choice(
      $.literal,
      $.wildcard,
      seq('[', ']'),
      $.upper_id,
      seq($.upper_id, $.lower_id, $.record_pattern),  // Ok response { body, status }
      seq($.upper_id, $.simple_pattern),
      seq($.upper_id, $.record_pattern),
      $.record_pattern,
      $.qualified_pattern,
      $.binding_pattern,
      seq('(', $.pattern, ')'),  // parenthesized: Ok (Chunk c)
      $.tuple_pattern,           // (a, b), (Ok x, Error e)
    ),

    // Tuple destructuring pattern: two or more comma-separated sub-patterns.
    binding_pattern: $ => $.lower_id,

    call: $ => prec.left('postfix', seq(
      $._expr,
      choice(
        seq(token.immediate('('), optional($._arg_list), ')'),
        // Zero-arg call `f()`: the `()` lexes as a single token (it would
        // otherwise be the `unit` literal), so match it immediately here.
        // `token.immediate` outranks the plain `unit` token, so an Upper-headed
        // `Inc()` resolves to a call rather than an incomplete element.
        token.immediate('()'),
      ),
    )),

    _arg_list: $ => seq(
      commaSep1(choice($.named_arg, $._expr)),
      optional(','),
    ),

    // `name=value` keyword argument. The `=` glyph binds a value to a parameter
    // by name (record fields keep `:`). All positional args must precede named.
    brace_block: $ => seq(
      '{',
      optional(seq(
        $._brace_item,
        repeat(seq(';', $._brace_item)),
        optional(';'),
      )),
      '}',
    ),

    _brace_item: $ => choice(
      $.brace_binding,
      $._expr,
    ),

    brace_binding: $ => seq(
      optional(choice('const', 'let', seq('let', 'mut'), 'mut')),
      $.lower_id,
      '=',
      $._expr,
    ),

    // `pipe` block: each line threads its result into `ret` for the next line.
    // Desugars to a sequence of `ret = <line>` bindings; value = last line.
    pipe_block: $ => seq(
      'pipe',
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // `try` block: implicit `?` after each line; first Error collapses the whole
    // block to that Error. Value is `Result T E` (Design A — caught by `match`).
    try_block: $ => seq(
      'try',
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // `retry [N] [D]` block: run the body like a `try`; on Error, re-run.
    //   retry 3            — up to 3 attempts, no delay
    //   retry 3 200ms      — 3 attempts, sleep 200ms between each
    //   retry [100ms, 1s]  — backoff schedule: len+1 attempts, those delays
    //   retry              — until it succeeds (unbounded)
    // The delay is a bare duration literal (juxtaposed after the count). Value is
    // `Result T E` (the Ok on success, or the last Error once attempts run out).
    retry_block: $ => seq(
      'retry',
      optional($._expr),
      optional($.duration_lit),
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // await expr — wait for next value from a stream/channel
    literal: $ => choice(
      $.number,
      $.bool,
      $.triple_quote_string,
      $.multiline_string,
      $.string,
      $.hex_color,
      $.unit,
      $.atom_lit,
      $.duration_lit,
      $.sigil_string,
      $.regex_sigil,
    ),

    // Atom: colon glued directly to a lowercase identifier (`:done`). Single
    // token so `:name` never collides with a record/ascription `:` (which is
    // always followed by space or an uppercase type). This is what makes the
    // `{ name: … }` = record vs `{ … }` = block content-disambiguation sound.
    number: $ => token(choice(
      /0b[01][01_]*/,
      /0x[0-9a-fA-F][0-9a-fA-F_]*/,
      /[0-9][0-9_]*\.[0-9][0-9_]*/,
      /[0-9][0-9_]*/,
    )),

    bool: $ => choice('true', 'false'),

    string: $ => seq(
      '"',
      repeat(choice(
        // `_string_content` is an EXTERNAL token (scanner.c): it greedily
        // consumes raw text up to `"`, `{`, `\` or newline. tree-sitter tries
        // external tokens before `extras`, so a `--` inside a string is NOT
        // eaten as a comment (the internal lexer's longest-match would let
        // `--.*` swallow the closing quote — see the `_string_content` case).
        $._string_content,
        seq(token.immediate('{'), $._expr, '}'),
        seq(token.immediate('\\'), token.immediate(/./)),
      )),
      '"',
    ),

    hex_color: $ => token(/#[0-9a-fA-F]{3,8}/),

    unit: $ => '()',

    // ----------
    // Identifiers
    // ----------

    lower_id: $ => /[a-z][a-zA-Z0-9_]*/,
    upper_id: $ => /[A-Z][a-zA-Z0-9_]*/,

  }
})

function commaSep(rule) {
  return optional(commaSep1(rule))
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)))
}
