test/corpus/imports.txt
================================================================================
import: bare name
================================================================================

import http from "std/http"

--------------------------------------------------------------------------------

(program
  (import_stmt
    (lower_id)
    (string)))

================================================================================
import: named exports
================================================================================

import { view, model } from "./UserCard"

--------------------------------------------------------------------------------

(program
  (import_stmt
    (import_name
      (lower_id))
    (import_name
      (lower_id))
    (string)))

================================================================================
import: named exports with alias
================================================================================

import { foo as bar } from "./mod"

--------------------------------------------------------------------------------

(program
  (import_stmt
    (import_name
      (lower_id)
      (lower_id))
    (string)))

================================================================================
import: js interop
================================================================================

import js "stripe-js" as stripe

--------------------------------------------------------------------------------

(program
  (import_stmt
    (string)
    (lower_id)))
